payas-server-core/src/graphql/validation/snapshots/payas_server_core__graphql__validation__document_validator__tests__aliases_valid.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
assertion_line: 303
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: Some(
                    Name(
                        "firstConcert",
                    ),
                ),
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(
                            1,
                        ),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: Some(
                            Name(
                                "headLine",
                            ),
                        ),
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
