payas-server-core/src/graphql/validation/snapshots/payas_server_core__graphql__validation__document_validator__tests__argument_valid.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(
                            1,
                        ),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "venue",
                        ),
                        arguments: {},
                        subfields: [
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "id",
                                ),
                                arguments: {},
                                subfields: [],
                            },
                            ValidatedField {
                                alias: None,
                                name: Name(
                                    "name",
                                ),
                                arguments: {},
                                subfields: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
