payas-server-core/src/graphql/validation/snapshots/payas_server_core__graphql__validation__document_validator__tests__composite_order_by_invalid_overly_nested_array.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: "validator.validate(create_query_document(r#\"\n                query {\n                    concerts(orderBy: [[{id: ASC}, {title: DESC}]]) {\n                        id\n                    }\n                }\n            \"#))"
---
Err(
    InvalidArgumentType {
        argument_name: "orderBy",
        expected_type: "ConcertOrdering",
        actual_type: "[ConcertOrdering]",
        pos: Pos(3:39),
    },
)
