payas-server-core/src/graphql/validation/snapshots/payas_server_core__graphql__validation__document_validator__tests__invalid_subfield.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
assertion_line: 288
expression: "validator.validate(create_query_document(r#\"\n                query {\n                    concert(id: 1) {\n                        id\n                        title\n                        foobar\n                    }\n                }\n            \"#))"
---
Err(
    InvalidField(
        "foobar",
        "Concert",
        Pos(6:25),
    ),
)
