payas-server-core/src/graphql/validation/snapshots/payas_server_core__graphql__validation__document_validator__tests__multi_operations_mismatched_operation_name_invalid.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Err(
    MultipleOperationsUnmatchedOperationName(
        "foo",
    ),
)
