payas-server-core/src/graphql/validation/snapshots/payas_server_core__graphql__validation__document_validator__tests__multi_operations_valid.snap
---
source: payas-server-core/src/graphql/validation/document_validator.rs
expression: validator.validate(create_query_document(query))
---
Ok(
    ValidatedOperation {
        name: Some(
            "concert1",
        ),
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(
                            1,
                        ),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: Some(
                            Name(
                                "headLine",
                            ),
                        ),
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
